Fix alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -148,10 +148,11 @@ ul li {
 }
 .social {
   padding-top: 12px;
-  word-spacing: 25px;
 }
 .social h4 > a {
   color: #000000;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .avatar {
   padding-top: 5%;
